--- a/README
+++ b/README
@@ -14,5 +14,7 @@ nixie-clock
 robot-arm
 analog-clock
 nixie-clock
+vga (VGA card based on R6545E, not implemented here for reference)
+rpi-vga (VGA card based on Raspberry Pi interface to 8088 with a 8255)
 
 my-components & my-footprints
