--- a/README
+++ b/README
@@ -16,5 +16,6 @@ analog-clock
 nixie-clock
 vga (VGA card based on R6545E, not implemented. here for reference only)
 rpi-vga (VGA card based on Raspberry Pi interface to 8088 two version: with 8255 and Z80-SIO)
+rc buddy-box
 
 my-components & my-footprints
