Dragon emulator external hardware, KiCAD schematics.

--- a/README
+++ b/README
@@ -6,6 +6,8 @@
 *                                                       *
 *********************************************************
 
+gEDA/gschem and Lepton EDA
+--------------------------
 balancing-robot
 pong
 pc-xt
@@ -18,4 +20,7 @@ vga (VGA card based on R6545E, not implemented. here for reference only)
 rpi-vga (VGA card based on Raspberry Pi interface to 8088 two version: with 8255 and Z80-SIO)
 rc buddy-box
 
-my-components & my-footprints
+KiCad EDA
+--------------------------
+dragon 32 computer emulator
+
